@@ -59,93 +59,7 @@
       </widget>
      </item>
      <item row="2" column="1" >
-      <widget class="QComboBox" name="Highway" >
-       <item>
-        <property name="text" >
-         <string>Unknown</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>motorway</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>motorway_link</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>trunk</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>trunk_link</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>primary</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>primary_link</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>secondary</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>tertiary</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>residential</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>unclassified</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>track</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>service</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>bridleway</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>footway</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>cycleway</string>
-        </property>
-       </item>
-       <item>
-        <property name="text" >
-         <string>steps</string>
-        </property>
-       </item>
-      </widget>
+      <widget class="QComboBox" name="Highway" />
      </item>
      <item row="3" column="0" >
       <widget class="QLabel" name="label_2" >
